# learning_create_bot

./: .env_sample  .gitignore  README.md  api.py  celeryconfig.py  config.py  loader.py  main.py  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: ccde3f950fa8_add_user_id_to_weather.py
config_data/: config.py
database/: database.py
handlers/custom_handlers/: history.py  maximum.py  minimum.py  weather.py
handlers/default_handlers/: echo.py  help.py  start.py
models/: models.py
src/: celeryconfig.py  loader.py
utils/: example_response.json  loader.py  weather.py
utils/misc/: coordinates.py  example_response.json
